--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.2.0",
     "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "winston": "^3.3.3"
   }
