--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "winston": "^2.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
